syntax = "proto3";

import "Effect.proto";
import "Scene.proto";
import "Texture.proto";

package frame.proto;

// Display effect on the screen.
message Display {
	// Output textures to the screen.
	repeated string out_textures = 1;
	// Textures that are used.
	repeated Texture textures = 2;
	// Effects that are used.
	repeated Effect effects = 3;
	// Scene loader.
	repeated Scene scenes = 4;
}
